src/objects/SBQQ__DiscountCategory__c.object
<CustomObject>
    <customHelpPage>SBQQ__DiscountCategoryHelp</customHelpPage>
    <description>Captures default discounts for a given category of products.</description>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used for instance to instance migrations as well and imports from external systems.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SBQQ__MaxDiscountRate__c</fullName>
        <description>Maximum allowable discount for this product category.</description>
        <inlineHelpText>Enter the maximum allowable discount for this product category.</inlineHelpText>
        <label>Max Discount (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Discount Category</label>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discount Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>